--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.5.0",
+    "@auth/prisma-adapter": "1.0.5",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.10.2",
     "axios": "^1.6.7",
